--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My First Ever Github Repo</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Let's practice git</h1>
+    </div>
 </body>
 </html>
